$Id$

1.4.3 TBD

1.4.2 2010-03-16

* new configuration options (see nagiosgraph.conf for details):
     colormax (optional)
     colormin (optional)
     language (optional)
     showprocessingtime (optional)
     default_geometry (optional)
     cgilogfile (optional)
     authzmethod (optional)
* added access control.  there are two ways to define access controls.  the
   default is to use the access control built in to nagios.  this works for
   nagios 3 and perhaps for older nagios releases.  the other way is to use
   an access control file specific to nagiosgraph.
* added i18n.  this is a very basic, no-dependencies implementation.  the
   intent is to be completely self contained, add minimal overhead, and not
   break existing installations.  error messages are not translated.  the
   language is detected from the HTTP_ACCEPT_LANGUAGE variable.  this can
   be overridden by explicit cgi argument.  language can be forced by
   specifying it in the nagiosgraph configuration file.
* added labels file.  labels can be specified individually via cgi arguments
   or via configuration files for specific combinations of host/service/data.
   labels can be overridden for individual languages, independenly of i18n.
   labels in nagiosgraph.conf are now ignored.  move them to the labels file.
* recognize relative paths for configuration filenames.  prepend the config
   dir when relative paths are specified.
* include a line with the hostname in the input to the map rules.  this
   enables the use of map rules that are host-specific.  this is a significant
   change from the previous 3-line behavior, but it will not break existing
   map rules unless they depend on the line count.  having the host information
   also makes it easier to diagnose parsing issues when processing data.
* remove trailing newline from perfdata string.
* prevent name clashes between data set names by using qualified identifiers