@@ -249,21 +249,37 @@ withminimums = PING
 # The heartbeat, stepsize, and resolution are rrdtool parameters.  They are
 # used when RRD files are created.  Changes to these values have no effect
 # on existing RRD files.  See the rrdtool documentation for details.
-# (warning: do not modify unless you know what you are doing)
+# These values must be coordinated with nagios service check settings and
+# the nagiosgraph data processing interval.
 
-# RRD heartbeat. In seconds, twice the size of servicecheck intervals.
+# RRD heartbeat, in seconds.  This defines the maximum length of an interval
+# with no data update before rrd considers the data unknown.  Typically twice
+# the size of servicecheck interval.  600 is the rrdtool default.
 #heartbeat = 600
+heartbeats = host,service=hb;host,service,db=hb;*,*=600
 
-# RRD step size.  300 seconds is the rrdtool default.
+# RRD step size, in seconds.  This defines how often the data will be updated.
+# Typically the size of the servicecheck interval.  300 is the rrdtool default.
 #stepsize = 300
+stepsizes = host,service=size;host,service,db=size;*,*=300
 
-# RRD resolution controls the number of data values and thus RRD file size.
+# RRD rows.  These numbers control the number of stored data values and thus
+# RRD file size.  They are used in the RRA arguments when creating RRD files.
+# There are 4 RRA arguments:
+#   RRA:(AVERAGE|MIN|MAX):0.5:1:row1
+#   RRA:(AVERAGE|MIN|MAX):0.5:6:row2
+#   RRA:(AVERAGE|MIN|MAX):0.5:24:row3
+#   RRA:(AVERAGE|MIN|MAX):0.5:288:row4
+# The rows are defined by the four resolution values.
 #resolution = 600 700 775 797
 #resolution = 17280 17520 32850 1095
+resolutions = host,service=a b c d;host,service,db=a b c d;*,*=a b c d
 
-# Organization of RRD files
-# _ = all files in a single directory, use _ to separate host/service/database
-# subdir = directory for each host, use ___ to separate service/database
+# Organization of RRD files.  There are two ways to organize the RRD files:
+# _ : all in a single directory (the old way):
+#   rrddir/HOST_SERVICE_DATABASE.rrd
+# subdir: organized by host (the new way):
+#   rrddir/HOST/SERVICE___DATABASE.rrd
 dbseparator = subdir
 
 # Optionally force the language.  If no language is specified, the language
