@@ -14,6 +14,11 @@ body {
   font-weight: normal;
   font-size: 9pt;
 }
+h1 {
+  clear: both;
+  font-size: 1.3em;
+  padding-top: 0.25em;
+}
 .period_banner {
   clear: both;
   padding-top: 0.25em;
@@ -73,7 +78,24 @@ body {
 .footer {
   clear: both;
   padding-top: 20px;
+  font-size: 0.8em;
   font-style: italic;
+}
+
+
+#ngzZoomInfo {
+  padding: 4px;
+  opacity: 0.4;
+  font-weight: bold;
+  font-size: 20pt;
+}
+#ngzZoomBox {
+  background-color: #ffdd00;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+}
+#ngzZoomPanel {
+  background-color: #dda;
 }
 
 
@@ -105,7 +127,7 @@ td.calHdrCell {
 }
 
 
-/* float controls in upper right corner of browser window */
+/* controls in upper right corner, floating above graphs. */
 .controls {
   background-color: #efefef;
   border: 1px solid #dddddd;
