@@ -2,6 +2,12 @@ $Id$
 
 1.4.3 TBD
 
+* added graph zooming.  zooming happens in-place (no separate window).
+   the javascript is not very tight, but it works.
+* optionally specify heartbeat, step, and resolution per host/service.
+* use exact data sources for each service instead of assuming that all
+   services with the same name will have the same data sources.
+
 1.4.2 2010-03-16
 
 * new configuration options (see nagiosgraph.conf for details):
